k8s/05-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: cnas
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
