k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnas-ingress
  namespace: cnas
spec:
  ingressClassName: nginx
  rules:
    - host: cnas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-service
                port:
                  number: 80
